bastion session requirements
Create instance details file for post creation bastion session

--- a/oci-ansible-instance-bastion.yml
+++ b/oci-ansible-instance-bastion.yml
@@ -32,6 +32,6 @@
 - set_fact:
     bastion_session_details: "{{ result }}"
 
-- name: Print bastion session details
-  debug:
-    var: bastion_session_details
+- name: Print bastion session connection
+  ansible.builtin.debug:
+    msg: 'Bastion ssh: ssh -i server.key -o ProxyCommand="ssh -i server.key -W %h:%p -p 22 {{ bastion_session_details.session.bastion_id }}@host.bastion.{{ region }}.oci.oraclecloud.com" -p 22 opc@{{ instance_details.instance.primary_private_ip }}'
