--- a/oci-ansible-instance-bastion.yml
+++ b/oci-ansible-instance-bastion.yml
@@ -26,7 +26,7 @@
       public_key_content: "{{ SSH_AUTHORIZED_KEYS }}"
     key_type: PUB
     session_ttl_in_seconds: 3600
-    display_name: "{{ instance_name }}-bastion-session-ssh"
+    #display_name: "{{ instance_name }}-bastion-session-ssh"
   register: result
 
 - set_fact:
@@ -34,4 +34,4 @@
 
 - name: Print bastion session connection
   ansible.builtin.debug:
-    msg: 'Bastion ssh: ssh -i server.key -o ProxyCommand="ssh -i server.key -W %h:%p -p 22 {{ bastion_session_details.session.bastion_id }}@host.bastion.{{ region }}.oci.oraclecloud.com" -p 22 opc@{{ instance_details.instance.primary_private_ip }}'
+    msg: 'Bastion ssh: ssh -i server.key -o ProxyCommand="ssh -i server.key -W %h:%p -p 22 {{ bastion_session_details.session.session_id }}@host.bastion.{{ region }}.oci.oraclecloud.com" -p 22 opc@{{ instance_details.instance.primary_private_ip }}'
