--- a/oci-ansible-instance-network.yml
+++ b/oci-ansible-instance-network.yml
@@ -10,6 +10,8 @@
     register: result
   - set_fact:
       vcn_id: "{{ result.vcn.id }}"
+  - set_fact:
+      vcn_ocid: "{{ result.vcn.id }}"
 
   - name: Create a new NAT Gateway
     collections:
@@ -21,6 +23,8 @@
     register: result
   - set_fact:
       ng_id: "{{ result.nat_gateway.id }}"
+  - set_fact:
+      nat_gateway_ocid: "{{ result.nat_gateway.id }}"
 
   - name: Create route table to connect internet gateway to the VCN
     collections:
@@ -34,6 +38,8 @@
     register: result
   - set_fact:
       rt_id: "{{ result.route_table.id }}"
+  - set_fact:
+      route_table_ocid: "{{ result.route_table.id }}"
 
   # Create a security list for allowing access to public instance
   # Use a jinja2 template of the ingress and egress security rules to generate
@@ -69,6 +75,8 @@
     register: result
   - set_fact:
       instance_security_list_ocid: "{{ result.security_list.id }}"
+  - set_fact:
+      security_list_ocid: "{{ result.security_list.id }}"
 
   - name: Create a subnet to host the private instance. Link security_list and route_table.
     collections:
@@ -85,3 +93,5 @@
     register: result
   - set_fact:
       instance_subnet_id: "{{ result.subnet.id }}"
+  - set_fact:
+      subnet_ocid: "{{ result.subnet.id }}"
